--- a/style/scss/_html-body-main.scss
+++ b/style/scss/_html-body-main.scss
@@ -17,6 +17,6 @@ main {
 }
 
 .content {
-  max-width: 30rem;
+  width: 30rem;
   margin: 1rem;
 }
